--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: your-twitter-handle
-github_username:  your-github-handle
+github_username: michaelmcphail 
 
 # Build settings
 markdown: kramdown
